[package]
name = "tide_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.16.0" }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }